Add anthrax blog post and fix formatting in forum

--- a/forum/styles/prosilver/template/overall_header.html
+++ b/forum/styles/prosilver/template/overall_header.html
@@ -97,7 +97,8 @@
     <link href="/less/rascal.less" rel="stylesheet/less">
     <link rel="stylesheet" href="/css/pygments_monokai.css" type="text/css" />
     <script src="/js/less-1.1.5.min.js"></script>
-    <script src="/js/jquery-1.5.js"></script>
+    <script src="/js/jquery-1.7.2.js"></script>
+    <script src="/js/bootstrap-2.0.4.js"></script>
 </head>
 
 <body id="phpbb" class="section-{SCRIPT_NAME} {S_CONTENT_DIRECTION}">
