--- a/forum/styles/prosilver/template/overall_footer.html
+++ b/forum/styles/prosilver/template/overall_footer.html
@@ -2,7 +2,7 @@
 		
 		<div id="page-footer">
 		
-			<div class="navbar">
+			<div class="phpbb-navbar">
 				<div class="inner"><span class="corners-top"><span></span></span>
 		
 				<ul class="linklist">
@@ -37,12 +37,12 @@
             <div class="fill">
                 <div class="container">
                     <div class="row">
-                        <div class="span3">
+                        <div class="span2">
                             <a href="/blog/feed/index.xml"><img alt="RSS icon" src="/img/rss-icon-32px.png"></a>
                             <a href="/blog/feed/atom/index.xml"><img alt="Atom icon" src="/img/atom-icon-32px.png"></a><br />
                             <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://creativecommons.org/images/public/somerights20.png" /></a>
                         </div>
-                        <div class="span10">
+                        <div class="span8">
                             <p>"He who receives an idea from me, receives instruction himself without lessening mine; as he who lights his taper at mine, receives light without darkening me." &mdash; Tom Jefferson</p>
                             <p>The posts in the forums are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>. The forum runs on <a href="http://www.phpbb.com/">phpBB</a>, available under <a href="http://www.phpbb.com/downloads/license/">the GNU General Public License, version 2</a>.</p>
                             <p><a href="/docs/privacy.html">Privacy policy</a> | <a href="/docs/terms-of-use.html">Terms of use</a> | <a href="/docs/forum-rules.html">Forum rules</a></p>
@@ -50,7 +50,7 @@
         					<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 		        			<!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
                         </div>
-                        <div class="span3">
+                        <div class="span2">
                             <a href="/docs/sources.html"><img alt="Open Source Hardware logo" src="/img/oshw-logo-outline-100x96px.png"/></a>
                         </div>
                     </div>
