Add directions for getting started, fix video formatting

--- a/less/rascal.less
+++ b/less/rascal.less
@@ -121,6 +121,12 @@ hr {
     border-bottom: 1px solid lighten(@rascal-gray, 35);
 }
 
+/* for videos */
+
+.hero-unit iframe {
+    margin-left: 0;
+}
+
 /* for phpBB */
 
 dt a { /* links to authors' names */
