Fix forum footer

--- a/less/rascal.less
+++ b/less/rascal.less
@@ -138,7 +138,7 @@ dt a { /* links to authors' names */
     background-color: @rascal-forum-bg;
 }
 
-html, body, #phpbb-cron-thingy, #phpbb { /* counteracting phpBB's attempt to force a vertical scroll bar */
+html, body, #phpbb { /* counteracting phpBB's attempt to force a vertical scroll bar */
     height: 100%;
     background-color: @rascal-white;
 }
